# galaxis

./: .gitignore  README.md
.github/workflows/: node.js.yml  platformio-build.yml
3d/: BlackPin.stl  Boden.stl  Deckel.stl  Display.stl  Inlay.stl  Pin-0.stl  Pin-1.stl  Pin-2.stl  Pin-3.stl  Pin-4.stl  Platte.stl
Design/: Galaxis.sll  Galaxis.spj
Design/assets/: ui_font_Destruct24.c  ui_font_Destruct24.fcfg  ui_font_Destruct36.fcfg
Galaxis/: .gitignore  platformio.ini
Galaxis/include/: abstract-game.h  ble_central_game.h  ble_device_game.h  ble_host_listener.h  board.h  galaxis-message.h  galaxis.h  galaxis_game_controller.h  galaxis_game_model.h  galaxis_game_view.h  game-state.h  game_over_view.h  main_menu_controller.h  main_menu_model.h  main_menu_view.h  message_observer.h  message_subject.h  noise_maker.h  notes.h  observer.h  player.h  screen.h  screen_manager.h  settings.h  settings_view.h  ship.h  single_player_game.h  sounds.h  subject.h  tone.h  view-update-message.h  view.h
Galaxis/lib/: lv_conf.h
Galaxis/lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Galaxis/lib/ui/components/: ui_comp_hook.c
Galaxis/lib/ui/fonts/: ui_font_Destruct36.c
Galaxis/lib/ui/images/: ui_img_2092402157.c  ui_img_489371723.c  ui_img_682575846.c  ui_img_bg2_png.c  ui_img_bg_png.c  ui_img_connected_png.c  ui_img_wifi_png.c
Galaxis/lib/ui/screens/: ui_Game.c  ui_GameOver.c  ui_MainMenu.c  ui_Settings.c  ui_SplashScreen.c
app/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
(+42 files in other folders)
